--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -581,6 +581,7 @@
                     <navigationItem key="navigationItem" id="Vd7-DP-tWN"/>
                     <connections>
                         <outlet property="view" destination="Sao-WR-4fm" id="t8u-XW-PuN"/>
+                        <segue destination="tZj-yi-ert" kind="modal" identifier="cellSelected" id="lYW-cc-g6q"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4wd-Vv-p5S" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -662,6 +663,49 @@
             </objects>
             <point key="canvasLocation" x="70" y="226"/>
         </scene>
+        <!--Single Wishlist Item View Controller-->
+        <scene sceneID="aq8-Fu-i1h">
+            <objects>
+                <viewController id="tZj-yi-ert" customClass="SingleWishlistItemViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GfS-uR-T1G">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="gdC-6O-J0F">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Name" id="RZU-Dr-h1j"/>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Y9x-Hj-yPV">
+                                <rect key="frame" x="72" y="130" width="176" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ufq-bk-qor">
+                                <rect key="frame" x="72" y="196" width="176" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="descriptionText" destination="Y9x-Hj-yPV" id="dCR-6Y-GaF"/>
+                        <outlet property="navigationBar" destination="RZU-Dr-h1j" id="KMc-1g-Odf"/>
+                        <outlet property="navigationItem" destination="RZU-Dr-h1j" id="0BE-vG-hw4"/>
+                        <outlet property="valueText" destination="ufq-bk-qor" id="XpG-Ey-qyQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Eld-LE-OU6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-358" y="936"/>
+        </scene>
     </scenes>
     <resources>
         <image name="menu.png" width="1024" height="1024"/>
@@ -672,8 +716,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="KQA-JK-hdH"/>
-        <segue reference="XUY-tV-1cl"/>
         <segue reference="Zye-kC-puS"/>
+        <segue reference="n0X-Mg-3Zs"/>
+        <segue reference="KQA-JK-hdH"/>
     </inferredMetricsTieBreakers>
 </document>
