--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -98,10 +98,10 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="verify phone number" minimumFontSize="17" id="nNw-rf-p2j">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="555-123-4567" minimumFontSize="17" id="nNw-rf-p2j">
                                 <rect key="frame" x="62" y="245" width="197" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="phonePad" secureTextEntry="YES"/>
+                                <textInputTraits key="textInputTraits" keyboardType="phonePad" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="new user" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="83M-H4-37a">
                                 <rect key="frame" x="69" y="79" width="182" height="78"/>
@@ -109,7 +109,7 @@
                                 <color key="textColor" red="0.34123264120000002" green="0.2803026066" blue="0.53029336729999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="contact" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Fq4-uh-9bg">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="verify contact" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Fq4-uh-9bg">
                                 <rect key="frame" x="71" y="187" width="182" height="78"/>
                                 <fontDescription key="fontDescription" name="TrebuchetMS" family="Trebuchet MS" pointSize="25"/>
                                 <color key="textColor" red="0.34123264120000002" green="0.2803026066" blue="0.53029336729999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -152,6 +152,7 @@
                     </view>
                     <connections>
                         <outlet property="continueButton" destination="8jk-7S-NsR" id="wfl-7U-PJT"/>
+                        <outlet property="newcontactTextField" destination="nNw-rf-p2j" id="fCS-iF-EIg"/>
                         <outlet property="newpassTextField" destination="uF3-Vt-nKJ" id="TLu-RG-GMG"/>
                         <outlet property="newuserTextField" destination="pfm-LI-dQA" id="lAa-zP-7yh"/>
                     </connections>
