--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -59,7 +59,7 @@
                                 </state>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shuq37.png" id="EUp-5k-mTI">
-                                <rect key="frame" x="61" y="79" width="197" height="111"/>
+                                <rect key="frame" x="73" y="89" width="172" height="97"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -749,8 +749,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="BTI-c2-VKA"/>
         <segue reference="Zye-kC-puS"/>
-        <segue reference="6sQ-Tf-WFd"/>
         <segue reference="KQA-JK-hdH"/>
     </inferredMetricsTieBreakers>
 </document>
