--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -373,7 +373,20 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Name" id="NvR-Iq-pDQ"/>
+                                    <navigationItem title="Name" id="NvR-Iq-pDQ">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="DHP-Qy-PgC">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="HRw-hL-bat">
+                                                <rect key="frame" x="12" y="87" width="35" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Back">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="dXY-3A-aXL" kind="modal" id="niW-yG-t3L"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="Y5c-OT-vX9">
@@ -707,7 +720,23 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="Name" id="RZU-Dr-h1j"/>
+                                    <navigationItem title="Name" id="RZU-Dr-h1j">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="4wa-ZW-iWJ">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="i3s-aI-hLm">
+                                                <rect key="frame" x="47" y="65" width="35" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Back">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <segue destination="eSB-z3-AwZ" kind="modal" id="dTV-Zb-sua"/>
+                                                </connections>
+                                            </button>
+                                            <connections>
+                                                <segue destination="eSB-z3-AwZ" kind="modal" id="lqB-cj-xQ8"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Y9x-Hj-yPV">
@@ -736,7 +765,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eld-LE-OU6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-358" y="936"/>
+            <point key="canvasLocation" x="-358" y="1060"/>
         </scene>
     </scenes>
     <resources>
@@ -749,8 +778,8 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="BTI-c2-VKA"/>
-        <segue reference="Zye-kC-puS"/>
-        <segue reference="KQA-JK-hdH"/>
+        <segue reference="niW-yG-t3L"/>
+        <segue reference="XUY-tV-1cl"/>
+        <segue reference="lqB-cj-xQ8"/>
     </inferredMetricsTieBreakers>
 </document>
